# DiscServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMySql.cpp  CMySql.h  Packdef.h  diskserver.ini  main.cpp
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: CMySql.cpp.ABA334E845512F5E.idx  CMySql.h.F1E55D7E9577EEEE.idx  IKernel.h.B491BC27D7E0060E.idx  INet.h.2401E2C891ECCA29.idx  Packdef.h.1D865B3EAC54C4F4.idx  QCoreApplication.94471369228A932B.idx  QDeadlineTimer.2C5F27D013E2502E.idx  QObject.9D2DEE5F3AFD8212.idx  QSqlError.7682168353233D3D.idx  QSqlQuery.DE17DF28A4F8F073.idx  QtCore.A49D975656D2A644.idx  QtCoreDepends.DEED6612D8686EE8.idx  QtSql.E9601395FF9D1089.idx  QtSqlDepends.FF7FEDEDB8B7DEB2.idx  TCPKernel.cpp.858800A283EB2E99.idx  TCPKernel.h.0686C546A1A645ED.idx  Windows.h.B9A13FEABBE2E916.idx  __msvc_bit_utils.hpp.1AB38FC4BFF4605B.idx  __msvc_chrono.hpp.55007CB32B1EF9D8.idx  __msvc_filebuf.hpp.0CFC29739A190BD1.idx  __msvc_int128.hpp.C41D0F59A65D6CB1.idx  __msvc_iter_core.hpp.BEDC3777E25215AD.idx  __msvc_minmax.hpp.5E9288F36A904C81.idx  __msvc_sanitizer_annotate_container.hpp.CFF9B1B78BBBC2EB.idx  __msvc_system_error_abi.hpp.009BB39E0B128933.idx  __msvc_xlocinfo_types.hpp.2A75736E0CA6AD82.idx  algorithm.EDD144B9F60A21A3.idx  atomic.4F4C1521DE03A3CE.idx  basetsd.h.B0C62A55A3014EB7.idx  cctype.7C9561A0636C3635.idx  cerrno.38AB12664D9B0157.idx  cfloat.A5B20630DAF72E6B.idx  chrono.B0A8D51DC2AF3EC6.idx  client_plugin.h.CDEFE9823EB371ED.idx  climits.9F453B477A4327CC.idx  clocale.348EFB1B56D8A9FB.idx  cmath.2E6DEB1B1DE40655.idx  combaseapi.h.8E41FDB756D3759C.idx  commdlg.h.C6967E8A99810169.idx  concurrencysal.h.E8E6B204566F3A26.idx  (+351 more)
build-local-qt611/: .ninja_deps  .ninja_log  CMakeCache.txt  DiskServer  build.ninja  cmake_install.cmake
build-local-qt611/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-local-qt611/DiskServerApp_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-local-qt611/DiskServerApp_autogen/ORNZQ2F6DW/: moc_tcpnet.cpp  moc_tcpnet.cpp.d
cmake/: write_default_diskserver_ini.cmake
kernel/: IKernel.h  TCPKernel.cpp  TCPKernel.h
server/: INet.h  tcpnet.cpp  tcpnet.h
tls/: ca.crt  ca.key  ca.srl  server.csr  server.ext
